# the-last-air-born

./: HISTORY.md  pyproject.toml  todo.md
src/: config.py  game_loops.py  game_state.py  game_types.py  main.py
src/data/: enemy-guns.json  enemy-type.json  guns.json  planes.json  player-guns.json  waves.json
src/entities/: animations.py  bullet.py  bullets.py  enemy_manager.py  guns.py  plane.py  planes.py
src/ui/: button.py  menu.py
src/utils/: helpers.py  utils.py
