[project]
name = "the-last-air-born"
version = "0.1.0"
description = ""
authors = [
    {name = "mhmdmsvi24",email = "mousavimohammadg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "pyment (>=0.3.3,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
